--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
-Properties modmetadata = new Properties()
-modmetadata.load(new FileInputStream("modmetadata.properties"))
 apply from: 'gradle/scripts/helpers.gradle'
+assertProperty 'mod_version'
+assertProperty 'root_package'
+assertProperty 'mod_id'
+assertProperty 'mod_name'
 
 assertSubProperties 'use_access_transformer', 'access_transformer_locations'
 assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
 assertSubProperties 'use_asset_mover', 'asset_mover_version'
 
 setDefaultProperty 'mapping_channel', true, 'stable'
-setDefaultProperty 'mapping_version', true, '39-1.12'
+setDefaultProperty 'mapping_version', true, '39'
 
 buildscript {
     repositories {
@@ -28,19 +30,21 @@ buildscript {
     }
 }
 
+//if (propertyBool('use_mirror')) apply from: "gradle/scripts/mirror.gradle"
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${project.modmetadata.mod_version}"
+version = "1.12.2-${project.mod_version}"
 group = root_package
 archivesBaseName = mod_name
 
 
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(propertyInteger('java_version'))
+java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
 minecraft {
 
@@ -80,7 +84,7 @@ minecraft {
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${project.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -93,7 +97,7 @@ minecraft {
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${project.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -186,20 +190,20 @@ dependencies {
 // A missing property will result in an error. Properties are expanded using ${} Groovy notation.
 // When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
 // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
-processResources {
+tasks.named('processResources', ProcessResources).configure {
     def filterList = ['mcmod.info', 'pack.mcmeta']
     filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
 
     var replaceProperties = [
-            mod_id: project.modmetadata.mod_id,
-            mod_name: project.modmetadata.mod_name,
-            mod_version: project.modmetadata.mod_version,
-            mod_description: project.modmetadata.mod_description,
-            mod_authors: "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
-            mod_credits: project.modmetadata.mod_credits,
-            mod_url: project.modmetadata.mod_url,
-            mod_update_json: project.modmetadata.mod_update_json,
-            mod_logo_path: project.modmetadata.mod_logo_path,
+            mod_id: propertyString('mod_id'),
+            mod_name: propertyString('mod_name'),
+            mod_version: propertyString('mod_version'),
+            mod_description: propertyString('mod_description'),
+            mod_authors: "[${propertyStringList('mod_authors', ',').join(', ')}]",
+            mod_credits: propertyString('mod_credits'),
+            mod_url: propertyString('mod_url'),
+            mod_update_json: propertyString('mod_update_json'),
+            mod_logo_path: propertyString('mod_logo_path'),
             mixin_refmap: propertyString('mixin_refmap'),
             mixin_package: propertyString('mixin_package')
 
@@ -220,11 +224,11 @@ jar {
     manifest {
         def attribute_map = [:]
         attribute_map['Specification-Version'] = '1' // We are version 1 of ourselves
-        attribute_map['Specification-Vendor'] = "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
+        attribute_map['Specification-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = project.modmetadata.mod_version
-        attribute_map['Implementation-Vendor'] = "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
+        attribute_map['Implementation-Version'] = propertyString('mod_version')
+        attribute_map['Implementation-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
             attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
