--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${project.mod_version}"
+version = "1.12.2-${project.modmetadata.mod_version}"
 group = root_package
 archivesBaseName = mod_name
 
