--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${project.modmetadata.mod_version}"
+version = "1.12.2-${modmetadata.mod_version}"
 group = root_package
 archivesBaseName = mod_name
 
@@ -79,11 +79,11 @@ minecraft {
         client {
             workingDirectory project.file('run/client')
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            //property 'forge.enabledGameTestNamespaces', project.modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${modmetadata.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -91,12 +91,12 @@ minecraft {
 
         server {
             workingDirectory project.file('run/server')
-            //property 'forge.enabledGameTestNamespaces', project.modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
             args '--nogui'
 
 
             mods {
-                "${project.modmetadata.mod_id}" {
+                "${modmetadata.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -194,15 +194,15 @@ tasks.named('processResources', ProcessResources).configure {
     filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
 
     var replaceProperties = [
-            mod_id: project.modmetadata.mod_id,
-            mod_name: project.modmetadata.mod_name,
-            mod_version: project.modmetadata.mod_version,
-            mod_description: project.modmetadata.mod_description,
-            mod_authors: "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]",
-            mod_credits: project.modmetadata.mod_credits,
-            mod_url: project.modmetadata.mod_url,
-            mod_update_json: project.modmetadata.mod_update_json,
-            mod_logo_path: project.modmetadata.mod_logo_path,
+            mod_id: modmetadata.mod_id,
+            mod_name: modmetadata.mod_name,
+            mod_version: modmetadata.mod_version,
+            mod_description: modmetadata.mod_description,
+            mod_authors: "[${modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]",
+            mod_credits: modmetadata.mod_credits,
+            mod_url: modmetadata.mod_url,
+            mod_update_json: modmetadata.mod_update_json,
+            mod_logo_path: modmetadata.mod_logo_path,
             mixin_refmap: propertyString('mixin_refmap'),
             mixin_package: propertyString('mixin_package')
 
@@ -223,11 +223,11 @@ jar {
     manifest {
         def attribute_map = [:]
          attribute_map['Specification-Version'] = '1' // We are version 1 of ourselves
-        attribute_map['Specification-Vendor'] = "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
+        attribute_map['Specification-Vendor'] = "[${modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = project.modmetadata.mod_version
-        attribute_map['Implementation-Vendor'] = "[${project.modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
+        attribute_map['Implementation-Version'] = modmetadata.mod_version
+        attribute_map['Implementation-Vendor'] = "[${modmetadata.mod_authors.split(',').findAll { !it.isEmpty() }.join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
             attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
@@ -237,7 +237,7 @@ jar {
             }
         }
         if((!propertyBool('is_coremod')) || propertyBool('coremod_includes_mod')){
-            attribute_map['Specification-Title'] = project.modmetadata.mod_id
+            attribute_map['Specification-Title'] = modmetadata.mod_id
         }
         if(propertyBool('use_access_transformer')){
             attribute_map['FMLAT']= project.access_transformer_locations
