--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,22 @@ cleanroom_version=15.24.0.3029
 mapping_channel= stable
 mapping_version= 39-1.12
 
+# Mod Information
+# HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
+mod_version=1.0.0
+root_package=com.example
+mod_id=modid
+mod_name=Mod Name
+
+# Mod Metadata (Optional)
+mod_description=
+mod_url=
+mod_update_json=
+# Delimit authors with commas
+mod_authors=
+mod_credits=
+mod_logo_path=
+
 
 # If any properties changes below this line, refresh gradle again to ensure everything is working correctly.
 
