--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -16,7 +16,15 @@ jobs:
     steps:
           - name: Checkout Repository
             uses: actions/checkout@v4
-      
+          - name: Cache Gradle
+            uses: actions/cache@v3
+            with:
+              path: ~/.npm
+                ~/.gradle/
+                ~/build/
+              key: ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
+              restore-keys: |
+                ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
 
           - name: Grant Execute Permission for gradlew
             run: chmod +x gradlew
