--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -46,5 +46,5 @@ jobs:
           - name: Upload Build Artifacts
             uses: actions/upload-artifact@v4
             with:
-              name: example-1.12.2-${{ steps.date.outputs.date }}
+              name: example-1.12.2-${{ steps.date.outputs.date }}-${{env.GITHUB_REF}}
               path: build/libs
