--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
         mavenCentral()
         gradlePluginPortal()
-        if (project.use_mirror == "true" )) {
+        if (project.use_mirror)) {
             //use mirror maven later, but try orgin for fail trying
             maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
             maven { url "https://${mirror_maven_url}" }
@@ -32,8 +32,6 @@ buildscript {
         classpath "org.spongepowered:mixingradle:0.7.+"
     }
 }
-
-//if (propertyBool('use_mirror')) apply from: "gradle/scripts/mirror.gradle"
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
