--- a/gradle.properties
+++ b/gradle.properties
@@ -55,6 +55,6 @@ asset_mover_version = 2.5
 
 # Mirror
 # Make it true and you will try to use mirror when orginal source fail
-use_mirror = false
+use_mirror = false as boolean
 mirror_maven_url=crystal.app.lss233.com/repositories/minecraft
 #mirror_maven_url=download.mcbbs.net/maven
