--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -46,5 +46,5 @@ jobs:
           - name: Upload Build Artifacts
             uses: actions/upload-artifact@v4
             with:
-              name: example-1.12.2-${{ steps.date.outputs.date }}- $GITHUB_RUN_NUMBER
+              name: example-1.12.2-${{ steps.date.outputs.date }}- ${{ github.run_number}}
               path: build/libs
