--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
         mavenCentral()
         gradlePluginPortal()
-        if (project.use_mirror)) {
+        if (project.use_mirror_url == "true") {
             //use mirror maven later, but try orgin for fail trying
             maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
             maven { url "https://${mirror_maven_url}" }
