--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,10 @@ buildscript {
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
         mavenCentral()
         gradlePluginPortal()
-        if ( "${project.use_mirror}" == "true") {
+        if (project.use_mirror == 'true') {
             //use mirror maven later, but try orgin for fail trying
             maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
-            maven { url "https://${project.mirror_maven_url}" }
+            maven { url "https://${mirror_maven_url}" }
         }
     }
     dependencies {
@@ -33,15 +33,17 @@ buildscript {
     }
 }
 
+//if (propertyBool('use_mirror')) apply from: "gradle/scripts/mirror.gradle"
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${propertyString('mod_version')}"
-group = propertyString('root_package')
-archivesBaseName = propertyString('mod_name')
+version = "1.12.2-${modmetadata.mod_version}"
+group = project.root_package
+archivesBaseName = project.mod_name
 
 
 
@@ -55,11 +57,11 @@ minecraft {
         attachMappings = true
     }
 
-    mappings channel: propertyString('mapping_channel'), version: propertyString('mapping_version')
+    mappings channel: project.mapping_channel, version: project.mapping_version
 
 
     if(propertyBool('use_access_transformer')){
-        accessTransformer = file('src/main/resources/META-INF/${propertyString('access_transformer_locations')}')
+        accessTransformer = file('src/main/resources/META-INF/${project.access_transformer_locations}')
     }
     
     runs {
@@ -81,11 +83,11 @@ minecraft {
         client {
             workingDirectory project.file('run/client')
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            //property 'forge.enabledGameTestNamespaces', propertyString('mod_id')
+            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
 
 
             mods {
-                "${propertyString('mod_id')}" {
+                "${project.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -93,12 +95,12 @@ minecraft {
 
         server {
             workingDirectory project.file('run/server')
-            //property 'forge.enabledGameTestNamespaces', propertyString('mod_id')
+            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
             args '--nogui'
 
 
             mods {
-                "${propertyString('mod_id')}" {
+                "${project.mod_id}" {
                     source sourceSets.main
                 }
             }
@@ -148,7 +150,7 @@ dependencies {
     // The "userdev" classifier will be requested and setup by ForgeGradle.
     // If the group id is "net.minecraft" and the artifact id is one of ["client", "server", "joined"],
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
-    minecraft "com.cleanroommc:cleanroom:${propertyString('cleanroom_version')}"
+    minecraft "com.cleanroommc:cleanroom:${project.cleanroom_version}"
 
     // Example mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
@@ -178,7 +180,7 @@ dependencies {
     // //implementation "io.github.llamalad7:mixinextras-common:0.3.5"
 
     if (propertyBool('use_asset_mover')) {
-        implementation "com.cleanroommc:assetmover:${propertyString('asset_mover_version')}"
+        implementation "com.cleanroommc:assetmover:${project.asset_mover_version}"
     }
 
     if (propertyBool('enable_junit_testing')) {
@@ -193,7 +195,7 @@ dependencies {
 // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
 tasks.named('processResources', ProcessResources).configure {
     def filterList = ['mcmod.info', 'pack.mcmeta']
-    filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${propertyString('mixin_configs')}.json" as String))
+    filterList.addAll(propertyStringList('mixin_configs').collect(config -> "mixins.${config}.json" as String))
 
     var replaceProperties = [
             mod_id: propertyString('mod_id'),
@@ -239,10 +241,10 @@ jar {
             }
         }
         if((!propertyBool('is_coremod')) || propertyBool('coremod_includes_mod')){
-            attribute_map['Specification-Title'] = propertyString('mod_id')
+            attribute_map['Specification-Title'] = project.mod_id
         }
         if(propertyBool('use_access_transformer')){
-            attribute_map['FMLAT']= propertyString('access_transformer_locations')
+            attribute_map['FMLAT']= project.access_transformer_locations
         }
 
         attributes(attribute_map)
@@ -287,5 +289,5 @@ sourceSets.each {
 }
 
 mixin {
-    add sourceSets.main, propertyString('mixin_refmap')
+    add sourceSets.main, project.mixin_refmap
 }
