weak reference for property

--- a/build.gradle
+++ b/build.gradle
@@ -33,17 +33,15 @@ buildscript {
     }
 }
 
-//if (propertyBool('use_mirror')) apply from: "gradle/scripts/mirror.gradle"
-
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${modmetadata.mod_version}"
-group = project.root_package
-archivesBaseName = project.mod_name
+version = "1.12.2-${propertyString('mod_version')}"
+group = propertyString('root_package')
+archivesBaseName = propertyString('mod_name')
 
 
 
@@ -57,11 +55,11 @@ minecraft {
         attachMappings = true
     }
 
-    mappings channel: project.mapping_channel, version: project.mapping_version
+    mappings channel: propertyString('mapping_channel'), version: propertyString('mapping_version')
 
 
     if(propertyBool('use_access_transformer')){
-        accessTransformer = file('src/main/resources/META-INF/${project.access_transformer_locations}')
+        accessTransformer = file('src/main/resources/META-INF/${propertyString('access_transformer_locations')}')
     }
     
     runs {
@@ -83,11 +81,11 @@ minecraft {
         client {
             workingDirectory project.file('run/client')
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', propertyString('mod_id')
 
 
             mods {
-                "${project.mod_id}" {
+                "${propertyString('mod_id')}" {
                     source sourceSets.main
                 }
             }
@@ -95,12 +93,12 @@ minecraft {
 
         server {
             workingDirectory project.file('run/server')
-            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', propertyString('mod_id')
             args '--nogui'
 
 
             mods {
-                "${project.mod_id}" {
+                "${propertyString('mod_id')}" {
                     source sourceSets.main
                 }
             }
@@ -230,7 +228,7 @@ jar {
         attribute_map['Specification-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = modmetadata.mod_version
+        attribute_map['Implementation-Version'] = propertyString('mod_version')
         attribute_map['Implementation-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
@@ -241,10 +239,10 @@ jar {
             }
         }
         if((!propertyBool('is_coremod')) || propertyBool('coremod_includes_mod')){
-            attribute_map['Specification-Title'] = project.mod_id
+            attribute_map['Specification-Title'] = propertyString('mod_id')
         }
         if(propertyBool('use_access_transformer')){
-            attribute_map['FMLAT']= project.access_transformer_locations
+            attribute_map['FMLAT']= propertyString('access_transformer_locations')
         }
 
         attributes(attribute_map)
@@ -289,5 +287,5 @@ sourceSets.each {
 }
 
 mixin {
-    add sourceSets.main, project.mixin_refmap
+    add sourceSets.main, propertyString('mixin_refmap')
 }
