--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,20 @@ cleanroom_version=15.24.0.3029
 mapping_channel= stable
 mapping_version= 39-1.12
 
+# Mod Information
+# HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
+root_package=com.example
+mod_id=example
+mod_name=Mod Name
+
+# Mod Metadata (Optional)
+mod_description=the demo desc
+mod_url=www.demo_url.net
+mod_update_json=www.demo_url.net
+# Delimit authors with commas
+mod_authors=somebody
+mod_credits=IDF, CleanroomMC, Kappa
+mod_logo_path=
 
 # If any properties changes below this line, refresh gradle again to ensure everything is working correctly.
 
