process for version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-### Here is the build setting, if you want to bump version, edit description, go to `modmetadata.properties`
+### Here is the build setting, if you want to bump version, edit description, go to `version.properties`
 
 
 # Gradle Properties
@@ -13,7 +13,7 @@ mapping_version= 39-1.12
 
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
-root_package=com.example
+root_package=com.somebody.example
 mod_id=example
 mod_name=Mod Name
 
