--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-Properties modmetadata = new Properties()
-modmetadata.load(new FileInputStream("modmetadata.properties"))
+Properties versiondata = new Properties()
+versiondata.load(new FileInputStream("version.properties"))
 
 apply from: 'gradle/scripts/helpers.gradle'
 
@@ -41,7 +41,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.12.2-${modmetadata.mod_version}"
+version = "1.12.2-${versiondata.mod_version}"
 group = project.root_package
 archivesBaseName = project.mod_name
 
@@ -59,6 +59,7 @@ minecraft {
 
     mappings channel: project.mapping_channel, version: project.mapping_version
 
+    copyIdeResources = true;
 
     if(propertyBool('use_access_transformer')){
         accessTransformer = file('src/main/resources/META-INF/${project.access_transformer_locations}')
@@ -83,7 +84,7 @@ minecraft {
         client {
             workingDirectory project.file('run/client')
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', version.mod_id
 
 
             mods {
@@ -95,7 +96,7 @@ minecraft {
 
         server {
             workingDirectory project.file('run/server')
-            //property 'forge.enabledGameTestNamespaces', modmetadata.mod_id
+            //property 'forge.enabledGameTestNamespaces', version.mod_id
             args '--nogui'
 
 
@@ -200,7 +201,7 @@ tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [
             mod_id: propertyString('mod_id'),
             mod_name: propertyString('mod_name'),
-            mod_version: propertyString('mod_version'),
+            mod_version: version,
             mod_description: propertyString('mod_description'),
             mod_authors: "[${propertyStringList('mod_authors', ',').join(', ')}]",
             mod_credits: propertyString('mod_credits'),
@@ -230,7 +231,7 @@ jar {
         attribute_map['Specification-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['ModType'] = 'CRL'
         attribute_map['Implementation-Title'] = project.name
-        attribute_map['Implementation-Version'] = modmetadata.mod_version
+        attribute_map['Implementation-Version'] = version
         attribute_map['Implementation-Vendor'] = "[${propertyStringList('mod_authors', ',').join(', ')}]"
         attribute_map['Implementation-Timestamp'] = new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ')
         if(propertyBool('is_coremod')){
