--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -33,7 +33,7 @@ jobs:
             id: date
             run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
           - name: Change Mod version
-            run: sed -a "/mod_version.*=.*/${{ steps.date.outputs.date }}/" version.properties
+            run: sed -i "a/mod_version.*=.*/${{ steps.date.outputs.date }}/" version.properties
           - name: Setup Java
             uses: actions/setup-java@v3
             with:
