--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 org.gradle.jvmargs = -Xmx3G
 
 java_version = 21
-cleanroom_version=15.24.0.3029
+cleanroom_version=0.1.0-infdev+build.13.run.550
 
 # Mapping Properties
 mapping_channel= stable
