--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -18,6 +18,16 @@ jobs:
             uses: actions/checkout@v4
           - name: Grant Execute Permission for gradlew
             run: chmod +x gradlew
+          - name: Cache Gradle
+            uses: actions/cache@v3
+            with:
+              path: 
+                ~/gradle/
+                ~/.gradle/
+                ~/build/
+              key: ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
+              restore-keys: |
+                ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
           - name: Get current date
             id: date
             run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
