--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 org.gradle.jvmargs = -Xmx3G
 
 java_version = 21
-cleanroom_version=0.2.0-alpha+build.8.run.551
+cleanroom_version=0.2.0-alpha+
 
 # Mapping Properties
 mapping_channel= stable
