--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.10.+', changing: true
+        classpath "net.minecraftforge.gradlejarsigner"
         classpath "org.spongepowered:mixingradle:0.7.+"
     }
 }
