--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.10.+', changing: true
-        classpath "net.minecraftforge:gradlejarsigner"
+        classpath "net.minecraftforge:gradlejarsigner:1.0.5"
         classpath "org.spongepowered:mixingradle:0.7.+"
     }
 }
