--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,24 @@ setDefaultProperty 'mapping_version', true, '39'
 
 buildscript {
     repositories {
+        if (project.use_mirror == 'true') {
+            // clear all proxy settings, this is available for global
+            System.clearProperty "http.proxyHost"
+            System.clearProperty "http.proxyPort"
+            System.clearProperty "https.proxyHost"
+            System.clearProperty "https.proxyPort"
+            System.clearProperty "socksProxyHost"
+            System.clearProperty "socksProxyPort"
+            System.setProperty "java.net.useSystemProxies", "false"
+
+            maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
+            maven { url "https://${mirror_maven_url}" }
+        }
         maven { url = 'https://maven.minecraftforge.net' }
         maven { url = 'https://maven.outlands.top/releases' }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
         mavenCentral()
         gradlePluginPortal()
-        if (project.use_mirror == 'true') {
-            //use mirror maven later, but try orgin for fail trying
-            maven { url "https://maven.aliyun.com/nexus/content/groups/public" }
-            maven { url "https://${mirror_maven_url}" }
-        }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.10.+', changing: true
