--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 org.gradle.jvmargs = -Xmx3G
 
 java_version = 21
-cleanroom_version=0.2.1-alpha+
+cleanroom_version=0.2.3-alpha+
 
 # Mapping Properties
 mapping_channel= stable
@@ -39,6 +39,7 @@ use_access_transformer = false
 access_transformer_locations = ${mod_id}_at.cfg
 
 # Mixins
+use_mixin = false
 # Powerful tool to do runtime description changes of classes
 # Wiki: https://github.com/SpongePowered/Mixin/wiki + https://github.com/CleanroomMC/MixinBooter/ + https://cleanroommc.com/wiki/forge-mod-development/mixin/preface
 # A configuration defines a mixin set, and you may have as many mixin sets as you require for your application.
