--- a/build.gradle
+++ b/build.gradle
@@ -258,6 +258,9 @@ jar {
         if(propertyBool('use_access_transformer')){
             attribute_map['FMLAT']= project.access_transformer_locations
         }
+        if(propertyBool('use_mixin')){
+            attribute_map['MixinConfigs'] = project.mixin_configs;
+        }
 
         attributes(attribute_map)
     }
