--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 org.gradle.jvmargs = -Xmx3G
 
 java_version = 21
-cleanroom_version=0.2.3-alpha+
+cleanroom_version=0.2.3-alpha
 
 # Mapping Properties
 mapping_channel= stable
@@ -16,6 +16,7 @@ mapping_version= 39-1.12
 root_package=com.somebody.example
 mod_id=example
 mod_name=Mod Name
+mod_version=1.0.0
 
 # Mod Metadata (Optional)
 mod_description=the demo desc
