--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -18,21 +18,11 @@ jobs:
             uses: actions/checkout@v4
           - name: Grant Execute Permission for gradlew
             run: chmod +x gradlew
-          - name: Cache Gradle
-            uses: actions/cache@v3
-            with:
-              path: 
-                ~/gradle/
-                ~/.gradle/
-                ~/build/
-              key: ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
-              restore-keys: |
-                ${{hashFiles('build.gradle') }}-${{hashFiles('gradle.properties') }}
           - name: Get current date
             id: date
             run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
           - name: Change mod version
-            run: sed -i "s/mod_version.*=.*/mod_version = ${{ steps.date.outputs.date }}/g"  version.properties
+            run: sed -i "s/mod_version.*=.*/mod_version = ${{ steps.date.outputs.date }}/g"  gradle.properties
           - name: Setup Java
             uses: actions/setup-java@v3
             with:
