--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ minecraft {
     copyIdeResources = true;
 
     if(propertyBool('use_access_transformer')){
-        accessTransformer = file('src/main/resources/META-INF/${project.access_transformer_locations}')
+        accessTransformer = file("src/main/resources/META-INF/${propertyString('access_transformer_locations')}")
     }
     
     runs {
